--- a/ghi/public/index.html
+++ b/ghi/public/index.html
@@ -15,7 +15,7 @@
           rel="stylesheet">
     <title>Impulse</title>
   </head>
-  <body class='bgcolor'>
+  <body class='jack_white'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
